--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Standard meta tags (optional fallback) -->
+  <title>The Second Innings</title>
+  <meta name="description" content="A sample webpage with content optimized for WhatsApp link previews.">
+  
+  <!-- Open Graph meta tags for WhatsApp link previews -->
+  <meta property="og:title" content="PMA 44th">
+  <meta property="og:description" content="Books authored by Major General S. Muhammad Azam, HI (M),(R)">
+  <meta property="og:image" content="second.jpg">
+  <meta property="og:type" content="website">
 </head>
-<body>
-    <h1>Hello</h1>
-</body>
+  <body>
+    <h1>Click to download</h1>
+   <a href="https://jimmythepainter.com/pma" target="_blank">
+    <img src="pma.jpg" alt="Click to view PDF"width="300px">
+  </a>
+  </body>
 </html>
