--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Open Graph meta tags for WhatsApp link previews -->
   <meta property="og:title" content="PMA 44th">
   <meta property="og:description" content="Books authored by Major General S. Muhammad Azam, HI (M),(R)">
-  <meta property="og:image" content="second.jpg">
+  <meta property="og:image" content="long.jpg">
   <meta property="og:type" content="website">
 </head>
   <body>
